--- a/src/components/common/EmailVeficationModal/style.scss
+++ b/src/components/common/EmailVeficationModal/style.scss
@@ -3,10 +3,8 @@
 .email_dialog{
     .MuiDialog-paper {
         border-radius: 20px !important;
-        width: 410px;
-        
+        width: 500px;    
     } 
-
 }
 
 
@@ -16,8 +14,7 @@
     border-color: $primary;
     border: 2px solid $primary;
     color: $white;
-    width: 5rem;
-    text-transform: capitalize;
+    text-transform: capitalize !important;
     font-weight: 600 !important;
     font-size: 16px !important;
 
