--- a/src/pages/VerifyEmail/style.scss
+++ b/src/pages/VerifyEmail/style.scss
@@ -3,7 +3,7 @@
 .navbar{
     background-color: #1b120d;
     width: 100%;
-    height: 10vh;
+    height: 10%;
     padding: 1rem 0rem 1rem 1rem;
     display: flex;
     align-items: center;
@@ -21,7 +21,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 90vh !important;
+    height: 80vh !important;
     flex-direction: column;
     gap: 5px;
 
@@ -39,9 +39,9 @@
 .verifybtton{
     color: $white !important;
     margin-top: 2rem !important;
-    height: 3.5rem;
+    height: 3.2rem;
     font-weight: 700 !important;
-    text-transform: capitalize !important;
+    text-transform:capitalize !important;
     font-size: 1rem !important;
     border-radius: 12px !important;
     width: 17rem;
