--- a/src/components/Brand/style.scss
+++ b/src/components/Brand/style.scss
@@ -7,7 +7,7 @@
 }
 
 .BrandField {
-    width: 70rem;
+    width: 100%;
     .MuiInputBase-root {
         border-radius: 12px !important;
         height: 45px;
