--- a/src/pages/VerifyEmail/style.scss
+++ b/src/pages/VerifyEmail/style.scss
@@ -1,6 +1,6 @@
 @import "../../constants/color";
 
-.navbar{
+.navbar {
     background-color: #1b120d;
     width: 100%;
     height: 10%;
@@ -8,16 +8,16 @@
     display: flex;
     align-items: center;
     gap: 20px;
-    
 
-    .navbar_heading{
+
+    .navbar_heading {
         color: #E9CC97;
-        font-size: 34px;
+        font-size: 30px;
     }
 
 }
 
-.main_div{
+.main_div {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,23 +27,50 @@
 
 }
 
-.verify_icon{
-    font-size: 10rem !important;
+.verify_icon {
+    font-size: 8rem !important;
     color: $primary;
 }
 
-.div_label{
-    font-size: 30px;
+.div_label {
+    font-size: 28px;
 }
 
-.verifybtton{
+.verifybtton {
     color: $white !important;
     margin-top: 2rem !important;
-    height: 3.2rem;
+    height: 2.9rem;
     font-weight: 700 !important;
-    text-transform:capitalize !important;
+    text-transform: capitalize !important;
     font-size: 1rem !important;
     border-radius: 12px !important;
-    width: 17rem;
-    font-size: 20px !important;
+    width: 16rem;
+    font-size: 18px !important;
+}
+
+
+@media (max-width: 700px) {
+    .LoginImg {
+        width: 50px !important;
+        height: 50px !important;
+    }
+
+    .navbar_heading {
+        font-size: 24px !important;
+    }
+
+    .verify_icon {
+        font-size: 7rem !important;
+    }
+
+    .div_label {
+        font-size: 20px !important;
+    }
+
+    .verifybtton {
+        height: 2.3rem;
+        width: 12rem;
+        font-size: 14px !important;
+    }
+
 }
