--- a/src/constants/_color.scss
+++ b/src/constants/_color.scss
@@ -3,9 +3,10 @@ $primary : #964315;
 $secondary : #F9F4F1;
 $font_color: #110E0C;
 $font-family: 'Open Sans', sans-serif;
-$red:red;
-$delete:#FA3E3E;
+$red: red;
+$delete: #FA3E3E;
 $background_color : #F5F5F5;
+$paper_boxshadow: rgba(0, 0, 0, 0.16);
 
 //date range
 $color-border: #dadada;
