--- a/src/components/common/Drawer/style.scss
+++ b/src/components/common/Drawer/style.scss
@@ -40,9 +40,7 @@
 }
 
 .logout_icon_div {
-    background-color: $secondary;
-    bottom: 0.5rem !important;
-    border-radius: 10px !important;
+    background-color: white;
     left: 0.8rem;
     right: 1rem;
     bottom: 0;
@@ -50,10 +48,25 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 90%;
-    height: 3rem;
     gap: 6px;
     cursor: pointer;
+
+    .logout_icon_div2 {
+        background-color: $secondary;
+        bottom: 0.5rem !important;
+        border-radius: 10px !important;
+        left: 0.8rem;
+        right: 1rem;
+        bottom: 0;
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+        height: 3rem;
+        gap: 6px;
+        cursor: pointer;
+    }
 
     .logout_text {
         font-size: 15px;
