added chnage password

--- a/src/components/Profile/ChangePassword/style.scss
+++ b/src/components/Profile/ChangePassword/style.scss
@@ -11,8 +11,8 @@
     margin-left: 2rem;
     display: block;
     padding: 1.5rem;
-    width: 50% !important;
-    height: 80% !important;
+    width: 35rem !important;
+    height: 22rem !important;
 
 
     .main_heding {
