add profile page module

--- a/src/constants/_color.scss
+++ b/src/constants/_color.scss
@@ -7,6 +7,7 @@ $red: red;
 $delete: #FA3E3E;
 $background_color : #F5F5F5;
 $paper_boxshadow: rgba(0, 0, 0, 0.16);
+$light_text: #A9A9A9;
 
 //date range
 $color-border: #dadada;
