add edit offer page functionality

--- a/src/components/common/DateRangePicker/style.scss
+++ b/src/components/common/DateRangePicker/style.scss
@@ -61,7 +61,7 @@
     position: absolute;
     z-index: 1000;
     right: 1%;
-    top: 100%;
+    bottom: -200px;
     box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.1);
 }
 
