edit the profile module

--- a/src/components/Profile/Details/style.scss
+++ b/src/components/Profile/Details/style.scss
@@ -12,7 +12,7 @@
     display: block;
     padding: 1.5rem;
     width: 35rem !important;
-    height: 22rem !important;
+    min-height: 18rem !important;
 
 
     .main_heding {
