--- a/src/components/Profile/ChangePassword/style.scss
+++ b/src/components/Profile/ChangePassword/style.scss
@@ -1,6 +1,6 @@
 @import "../../../constants/color";
 
-.main_div {
+.changemain_div {
 
     .MuiInputBase-root {
         border-radius: 12px !important;
@@ -12,7 +12,7 @@
     display: block;
     padding: 1.5rem;
     width: 35rem !important;
-    height: 22rem !important;
+    min-height: 22rem !important;
 
 
     .main_heding {
